# 2023

./: .gitmodules  LICENSE  README.md  eulers_method.py  newtons_method.py  temp2.py  temp_simpsons.py
C/: .gitignore
C/Calculator/: CMakeLists.txt  zig-toolchain-x86_64-windows.cmake
C/Calculator/Tests/: CMakeLists.txt  conversion.c  evaluation.c  input.c
C/Calculator/lib/Stack/: CMakeLists.txt
C/Calculator/lib/Stack/lib/LinkedList/: CMakeLists.txt
C/Calculator/lib/Stack/lib/LinkedList/src/: LinkedList.c  LinkedList.h  Tests.c
C/Calculator/lib/Stack/src/: Stack.c  Stack.h  Tests.c
C/Calculator/src/: CalculatorLib.c  CalculatorLib.h  main.c  main.h
C/Calculators/BasicOperatorCalculator/src/: flipped_main.c  main.c
C/Calculators/BasicSumCalculator/src/: main.c
C/Calculators/BetterInfiniteProductCalculator/src/: main.c
C/Calculators/InfiniteInitialOperatorCalculator/src/: main.c
C/Calculators/InfiniteOperatorCalculator/src/: main.c
C/Calculators/InfiniteProductCalculator/src/: main.c
C/Calculators/InfiniteSumCalculator/src/: main.c
C/Calculators/InlineLeftToRightOperatorCalculator/src/: main.c
C/LinkedList/: CMakeLists.txt  Makefile
C/LinkedList/src/: LinkedList.c  LinkedList.h  LinkedListTestHelpers.c  LinkedListTestHelpers.h  Tests.c  main.c
C/Stack/: CMakeLists.txt  Makefile
C/Stack/lib/LinkedList/: Makefile
C/Stack/src/: Stack.c  Stack.h  Tests.c
C/StackV2/: CMakeLists.txt
C/StackV2/src/: Stack.c  Stack.h  Tests.c
C/w3SchoolsTutorial/: .gitignore  myfirstprogram.c
Linked List Experiments/: classes.py
MATH and COSC/: eulers_method.rs
Zig/Calculator/: build.zig  build.zig.zon  runKcov.sh
Zig/Calculator-Website/: Calculator.wasm  build.zig  build.zig.zon  index.html  main.js  wasm.zig
Zig/Calculator/src/: Calculator.zig  CalculatorIo.zig  CalculatorLib.zig  CalculatorLibTests.zig  CalculatorLibTestsData.csv  CallbackExample.zig  Io.zig  Tests.zig  Tokenizer.zig  addons.zig  main.zig  tests.zig
Zig/Calculators/BasicOperatorCalculator/: build.zig  build.zig.zon
Zig/Calculators/BasicOperatorCalculator/src/: main.zig
Zig/Calculators/BasicSumCalculator/: build.zig
Zig/Calculators/BasicSumCalculator/src/: main.zig
Zig/Calculators/InfiniteInitialOperatorCalculator/: build.zig  build.zig.zon
Zig/Calculators/InfiniteInitialOperatorCalculator/src/: main.zig
Zig/Calculators/InfiniteOperatorCalculator/: build.zig  build.zig.zon
Zig/Calculators/InfiniteOperatorCalculator/src/: main.zig
Zig/Calculators/InfiniteProductCalculator/: build.zig  build.zig.zon
Zig/Calculators/InfiniteProductCalculator/src/: main.zig
Zig/Calculators/InfiniteSumCalculator/: build.zig  build.zig.zon
Zig/Calculators/InfiniteSumCalculator/src/: main.zig
Zig/Calculators/InlineLeftToRightOperatorCalculator/: build.zig  build.zig.zon
Zig/Calculators/InlineLeftToRightOperatorCalculator/src/: main.zig
Zig/HelloWorld/: build.zig
Zig/HelloWorld/src/: main.zig
Zig/Stack/: build.zig  build.zig.zon
Zig/Stack/src/: Stack.zig
fibonacci_python_rust_integration/: temp.rs  temp2.rs  temp3.py
